optimize locatePolicySet